# RedesNeuronales

./: Activacion.py  CapaDensa.py  README.md  RedNeuronal.py  main.py  mnist.onnx  utils.py
onnx/: CMakeLists.txt  main.cpp
training/: Perdida.py  main.py
